force-app/main/default/objects/LenderAttributeSet__c/LenderAttributeSet__c.object-meta.xml
<CustomObject>
    <description>Each record represents the attribute set a lender will use for their inspections</description>
    <label>LenderAttributeSet</label>
    <nameField>
        <displayFormat>LAS-{0000}</displayFormat>
        <label>LenderAttributeSet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LenderAttributeSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>