force-app/main/default/objects/LenderAttributeSet__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the current attribute set is the active attribute set</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>