force-app/main/default/objects/LenderAttributeSet__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>LenderAttributeSets</relationshipLabel>
    <relationshipName>LenderAttributeSets</relationshipName>
    <type>Lookup</type>
</CustomField>