force-app/main/default/objects/LenderAttributeSet__c/fields/LenderLabel__c.field-meta.xml
<CustomField>
    <fullName>LenderLabel__c</fullName>
    <description>LenderSpecific Label to use on reports</description>
    <label>LenderLabel</label>
    <type>TextArea</type>
</CustomField>